[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Level/Level1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/BG1.gd" type="Script" id=2]
[ext_resource path="res://PNG/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/RockContainer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Ground/Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Plane/Plane.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://Font/kenvector_future.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/GameOverPanel.gd" type="Script" id=9]
[ext_resource path="res://PNG/UI/UIbg.png" type="Texture" id=10]
[ext_resource path="res://PNG/UI/textGameOver.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -360.858 ), Vector2( 0, 0 ) ]
}

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="BG1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 800, 0 )
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="ParallaxBackground/BG1"]
position = Vector2( 400, 240 )
texture = ExtResource( 3 )

[node name="RockStarContainer" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="generation_time" type="Timer" parent="RockStarContainer"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="GroundContainer" type="Node2D" parent="."]

[node name="Ground" parent="GroundContainer" instance=ExtResource( 5 )]
position = Vector2( 404, 445 )

[node name="Ground2" parent="GroundContainer" instance=ExtResource( 5 )]
position = Vector2( 1212, 445 )

[node name="Plane" parent="." instance=ExtResource( 6 )]
position = Vector2( 111.143, 184.807 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.721569, 0.713726, 0.207843, 1 )
anchor_right = 1.0
margin_bottom = 40.0

[node name="score" type="Label" parent="CanvasLayer"]
margin_left = 654.03
margin_top = 10.4013
margin_right = 741.03
margin_bottom = 28.4013
custom_fonts/font = SubResource( 1 )
text = "SCORE: 0"

[node name="pause" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 21.8043
margin_top = 7.351
margin_right = 98.8043
margin_bottom = 31.351
custom_fonts/font = SubResource( 2 )
text = "PAUSE"

[node name="selector" type="Button" parent="CanvasLayer"]
margin_left = 115.615
margin_top = 7.35092
margin_right = 231.615
margin_bottom = 31.3509
custom_fonts/font = SubResource( 3 )
text = "SELECTOR"

[node name="GameOverPanel" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, -360.858 )
z_index = 20
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="GameOverPanel"]
margin_left = 274.925
margin_top = 76.4498
margin_right = 538.925
margin_bottom = 340.45
texture = ExtResource( 10 )

[node name="current_score" type="Label" parent="GameOverPanel"]
margin_left = 308.74
margin_top = 189.563
margin_right = 394.74
margin_bottom = 220.563
custom_fonts/font = SubResource( 4 )
text = "Current Score
"

[node name="maximum_score" type="Label" parent="GameOverPanel"]
margin_left = 308.74
margin_top = 224.112
margin_right = 411.74
margin_bottom = 255.112
custom_fonts/font = SubResource( 5 )
text = "Maximum Score
"

[node name="sprite" type="Sprite" parent="GameOverPanel"]
position = Vector2( 415.328, 123.496 )
texture = ExtResource( 11 )

[node name="Retry" type="Button" parent="GameOverPanel"]
pause_mode = 2
margin_left = 294.08
margin_top = 324.0
margin_right = 371.08
margin_bottom = 344.0
custom_fonts/font = SubResource( 6 )
text = "RETRY"

[node name="BacktoTitleScreen" type="Button" parent="GameOverPanel"]
pause_mode = 2
margin_left = 400.271
margin_top = 324.0
margin_right = 521.271
margin_bottom = 344.0
custom_fonts/font = SubResource( 7 )
text = "BACK TO MENU"

[node name="anim" type="AnimationPlayer" parent="GameOverPanel"]
anims/Move = SubResource( 8 )
[connection signal="mouse_entered" from="CanvasLayer/pause" to="CanvasLayer" method="_on_pause_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/pause" to="CanvasLayer" method="_on_pause_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/selector" to="CanvasLayer" method="_on_selector_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/selector" to="CanvasLayer" method="_on_selector_pressed"]
[connection signal="pressed" from="GameOverPanel/Retry" to="Plane" method="_on_Retry_pressed"]
[connection signal="pressed" from="GameOverPanel/BacktoTitleScreen" to="GameOverPanel" method="_on_BacktoTitleScreen_pressed"]
[connection signal="animation_finished" from="GameOverPanel/anim" to="GameOverPanel" method="_on_anim_animation_finished"]
